Nuebo estilo html y css

--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
        
     </header>
     <main>
-        <p>Welcome to JCPELECTRIK, your trusted partner in electrical solutions.</p>
-        <a href="https://github.com/jcpelectrik/proyecto-contrlol-de-jardin" target="_blank">Proyecto Jardin</a>
+        <divb>
+            <h2>Esta es la pagina web en la que se publicaran los enlaces y documentacion de los proyectos</h2>
+        </divb>
+        <divc>
+            <h3>Proyecto Campo</h3>
+            <p> Este proyecto trata de controlar mediante barios esp32-S3 un campo, chale o lago de este estilo.
+                Lo que consegimos es domotizar su tereno a sus necesidades
+                <a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">codigo</a>
+            </p>
+        </divc>
     </main>
     <footer>
             <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
