Cambios del teesto de p en el index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </divb>
         <divc>
             <h3>Proyecto Campo</h3>
-            <p> Este proyecto trata de controlar mediante barios esp32-S3 un campo, chale o lago de este estilo.
-                Lo que consegimos es domotizar su tereno a sus necesidades
+            <p> Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago.
+                Conseguimos domotizar su terreno según sus necesidades.
                 <a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">codigo</a>
             </p>
         </divc>
