--- a/index.html
+++ b/index.html
@@ -20,13 +20,25 @@
         <divb>
             <h2>Esta es la pagina web en la que se publicaran los enlaces y documentacion de los proyectos</h2>
         </divb>
+    <diva>
+        <divd>
+            <h3>Ha que me dedico</h3>
+            <p> Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.
+                A través de esta página, busco dar a conocer mi trabajo y obtener oportunidades laborales, tanto como electricista como programador, gracias a sus recomendaciones.
+            </p>
+        </divd>
         <divc>
             <h3>Proyecto Campo</h3>
             <p> Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago.
                 Conseguimos domotizar su terreno según sus necesidades.
+                Este codigo es incompleto es por encima nada mas. 
                 <a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">codigo</a>
             </p>
         </divc>
+        <dive>
+            <h3>Prosimo proyectos</h3>
+        </dive>
+    </diva>
     </main>
     <footer>
             <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
