--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
             <p> Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago.
                 Conseguimos domotizar su terreno según sus necesidades.
                 Este codigo es incompleto es por encima nada mas. 
-                <a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">codigo</a>
             </p>
+            <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Codigo base</a></p>
         </divc>
         <dive>
-            <h3>Prosimo proyectos</h3>
+            <h3>Enlaces a todos los proyectos</h3>
+            <p> En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+            <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Proyecto Campo</a></p>
         </dive>
     </diva>
     </main>
