--- a/index.html
+++ b/index.html
@@ -17,30 +17,29 @@
        
     </header>
     <main>
-        <divb>
+        <div class="cabecera">
             <h2>Esta es la pagina web en la que se publicaran los enlaces y documentacion de los proyectos</h2>
-        </divb>
-    <diva>
-        <divd>
-            <h3>Ha que me dedico</h3>
-            <p> Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.
+        </div>
+        <div class="colimnas">
+            <div clase="columnastipo">
+                <h3>Ha que me dedico</h3>
+                <p> Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.
                 A través de esta página, busco dar a conocer mi trabajo y obtener oportunidades laborales, tanto como electricista como programador, gracias a sus recomendaciones.
-            </p>
-        </divd>
-        <divc>
-            <h3>Proyecto Campo</h3>
-            <p> Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago.
+                </p>
+            </div>
+            <div class="columnastipo">
+                <h3>Proyecto Campo</h3>
+                <p> Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago.
                 Conseguimos domotizar su terreno según sus necesidades.
-                Este codigo es incompleto es por encima nada mas. 
-            </p>
-            <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Codigo base</a></p>
-        </divc>
-        <dive>
-            <h3>Enlaces a todos los proyectos</h3>
-            <p> En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
-            <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Proyecto Campo</a></p>
-        </dive>
-    </diva>
+                Este codigo es incompleto es por encima nada mas. </p>
+                <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Codigo base</a></p>
+            </div>
+            <div class="columnastipo">
+                <h3>Enlaces a todos los proyectos</h3>
+                <p> En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+                <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Proyecto Campo</a></p>
+            </div>
+        </div>
     </main>
     <footer>
             <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
