areglo falta de ortografia

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="colimnas">
             <div clase="columnastipo">
-                <h3>Ha que me dedico</h3>
+                <h3>A que me dedico</h3>
                 <p> Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.
                 A través de esta página, busco dar a conocer mi trabajo y obtener oportunidades laborales, tanto como electricista como programador, gracias a sus recomendaciones.
                 </p>
