areglo columnas en html y css

--- a/index.html
+++ b/index.html
@@ -20,23 +20,19 @@
         <div class="cabecera">
             <h2>Esta es la pagina web en la que se publicaran los enlaces y documentacion de los proyectos</h2>
         </div>
-        <div class="colimnas">
-            <div clase="columnastipo">
+        <div class="columnas">
+            <div class="columnastipo">
                 <h3>A que me dedico</h3>
-                <p> Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.
-                A través de esta página, busco dar a conocer mi trabajo y obtener oportunidades laborales, tanto como electricista como programador, gracias a sus recomendaciones.
-                </p>
+                <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.</p>
             </div>
             <div class="columnastipo">
                 <h3>Proyecto Campo</h3>
-                <p> Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago.
-                Conseguimos domotizar su terreno según sus necesidades.
-                Este codigo es incompleto es por encima nada mas. </p>
+                <p>Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago. Conseguimos domotizar su terreno según sus necesidades.</p>
                 <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Codigo base</a></p>
             </div>
             <div class="columnastipo">
                 <h3>Enlaces a todos los proyectos</h3>
-                <p> En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+                <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
                 <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Proyecto Campo</a></p>
             </div>
         </div>
