--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         <div class="columnas">
             <div class="columnastipo">
                 <h3>A que me dedico</h3>
-                <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.</p>
+                <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.
+                    Mi correo es jcpelectrik@gmail.com
+                </p>
             </div>
             <div class="columnastipo">
                 <h3>Proyecto Campo</h3>
