ampliacion del html

--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
         <div class="cabecera">
             <h2>Esta es la pagina web en la que se publicaran los enlaces y documentacion de los proyectos</h2>
         </div>
+        <div class="cabecera">
+            <h2>A que me dedico</h2>
+            <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.
+                Mi correo es jcpelectrik@gmail.com
+            </p>
+        </div>
+        <div class="cabecera">
+            <h2>Electronica</h2>
+            <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Electronica</p>
+        </div>
         <div class="columnas">
-            <div class="columnastipo">
-                <h3>A que me dedico</h3>
-                <p>Soy electricista y dedico mi tiempo libre a la programación de microcontroladores como Arduino y ESP32 para domotizar y automatizar mi hogar y otras propiedades.
-                    Mi correo es jcpelectrik@gmail.com
-                </p>
             </div>
             <div class="columnastipo">
                 <h3>Proyecto Campo</h3>
@@ -37,6 +42,17 @@
                 <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
                 <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Proyecto Campo</a></p>
             </div>
+            <div class="columnastipo">
+                <h3>Prosimo proyecto</h3>
+                <p></p>
+        </div>
+        <div class="cabecera">
+            <h2>Electricidad</h2>
+            <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Electricidad</p>
+        </div>
+        <div class="columnas">
+            <div class="columnastipo">
+                <h3>Proyecto Electricidad</h3>
         </div>
     </main>
     <footer>
