--- a/index.html
+++ b/index.html
@@ -54,6 +54,44 @@
             <div class="columnastipo">
                 <h3>Proyecto Electricidad</h3>
         </div>
+        <div class="cabecera">
+            <h2>Telecomunicadiones</h2>
+            <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Telecomunicadiones</p>
+        </div>
+            <div class="columnas">
+                <div class="columnastipo">
+                    <h3>Proyecto Telecomunicaciones</h3>
+                </div>
+            </div>
+        </div>
+        <div class="cabecera">
+            <h2>fotovoltaica</h2>
+            <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Fotovoltaica</p>
+        </div>
+            <div class="columnas">
+                <div class="columnastipo">
+                    <h3>Proyecto Fotovoltaica</h3>
+                </div> 
+            </div> 
+        <div class="cabecera">
+            <h2>Programacion</h2>
+            <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Programacion</p>
+        </div>
+            <div class="columnas">
+                <div class="columnastipo">
+                    <h3>Proyecto Programacion</h3>
+                </div>
+                <div class="columnastipo">
+                    <h3>Libros de programación</h3>
+                    <p><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.pdf" target="_blank">JavaScript</a></p>
+                    <p><a href="https://riptutorial.com/Download/typescript-es.pdf" target="_blank">TypeScript</a></p>
+                    <p><a href="https://argentinaenpython.com/quiero-aprender-python/aprenda-a-pensar-como-un-programador-con-python.pdf" target="_blank">Python</a></p>
+                    <p><a href="http://rubysur.org/aprende.a.programar/" target="_blank">Ruby</a></p>
+                    <p><a href="https://phpdevenezuela.github.io/php-the-right-way/" target="_blank">PHP</a></p> 
+                    <p><a href="https://www.tesuva.edu.co/phocadownloadpap/Fundamentos%20de%20programcion%20en%20Java.pdf" target="_blank">Java</a></p>
+                    <p><a href="https://jorgesanchez.net/manuales/sql/intro-sql-sql2016.html" target="_blank">SQL</a></p>
+                </div>
+            </div>      
     </main>
     <footer>
             <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
