introducion de reglamentos de electricidad

--- a/index.html
+++ b/index.html
@@ -53,6 +53,32 @@
         <div class="columnas">
             <div class="columnastipo">
                 <h3>Proyecto Electricidad</h3>
+            </div>
+            <div class="columnastipo">
+                <h3>Reglmento REBT</h3>
+                <p>
+                    El REBT (Reglamento Electrotécnico de Baja Tensión) es un conjunto de normativas que regulan la instalación y uso de instalaciones eléctricas de baja tensión en España. Su objetivo principal es garantizar la seguridad, el correcto funcionamiento y la eficiencia energética de las instalaciones eléctricas de baja tensión, tanto en edificaciones como en instalaciones industriales, con el fin de evitar riesgos como incendios, electrocuciones o fallos eléctricos.
+                    El REBT está organizado en Instrucciones Técnicas Complementarias (ITC), que desarrollan y detallan los requisitos técnicos para diversos aspectos de las instalaciones eléctricas. Algunas de las ITC más relevantes son:
+                    ITC-BT-01 a ITC-BT-04: Normas generales sobre las características de las instalaciones y condiciones técnicas y de seguridad.
+                    ITC-BT-05 a ITC-BT-20: Requisitos para la instalación de sistemas eléctricos en diferentes tipos de edificios, como viviendas, locales comerciales, hospitales, etc.
+                    ITC-BT-21 a ITC-BT-41: Aspectos específicos como protección contra sobrecargas, cortocircuitos, sistemas de puesta a tierra, y sistemas de protección ante contactos eléctricos.
+                </p>
+                <p><a href="https://www.plcmadrid.es/rebt/"target="_blank">REBT de plcmadrid</a></p>
+                <p><a href="https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/baja-tension/Paginas/guia-tecnica-aplicacion.aspx"target="_blank">REBT de industria</a></p>
+            </div>
+            <div class="columnastipo">
+                <h3>Reglamento RLAT</h3>
+                <p>
+                    El RLAT (Reglamento sobre Condiciones Técnicas y Garantías de Seguridad en Instalaciones Eléctricas de Alta Tensión), aprobado por el Real Decreto 337/2014, regula las condiciones técnicas y de seguridad en instalaciones eléctricas de alta tensión en España. Este reglamento aplica a las instalaciones que operan con tensiones superiores a 1 kV, y su objetivo es garantizar la seguridad de las personas, bienes y la funcionalidad de las instalaciones eléctricas.
+                    Ámbito de aplicación: El RLAT regula las instalaciones que manejan tensiones superiores a 1 kV. Esto incluye líneas eléctricas de alta tensión, subestaciones, transformadores y otros equipos relacionados con la distribución de energía eléctrica.
+                    Instrucciones Técnicas Complementarias (ITC-RAT): El reglamento incluye varias ITC que desarrollan los aspectos específicos de la normativa:
+                    ITC-RAT 01 a ITC-RAT 23: Estas ITC cubren aspectos como la protección contra sobretensiones, el aislamiento de conductores, la instalación de equipos de protección y medida, la puesta a tierra, y los requisitos para instalaciones de interior y exterior.
+                    Documentación y puesta en servicio: El RLAT establece procedimientos detallados para la redacción de proyectos, la documentación necesaria y la puesta en servicio de las instalaciones eléctricas de alta tensión. Esto incluye requisitos para los informes técnicos y las certificaciones de seguridad.
+                    Inspecciones y verificaciones: Se exigen inspecciones periódicas y verificaciones técnicas para garantizar que las instalaciones sigan cumpliendo con los estándares de seguridad establecidos. Estas inspecciones deben ser realizadas por organismos de control autorizados.
+                    Responsabilidad y seguros: Las empresas instaladoras deben estar cubiertas por seguros de responsabilidad civil que aseguren la cobertura de riesgos asociados a las instalaciones de alta tensión.
+                </p>
+                <p><a href="https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/instalaciones-alta-tension/Paginas/reglamento-seguridad-instalaciones-alta-tension.aspx"target="_blank">RLAT de industria</a></p>
+            </div>
         </div>
         <div class="cabecera">
             <h2>Telecomunicadiones</h2>
