introducion de reglamento ict y fotovoltaica

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                 <div class="columnastipo">
                     <h3>Proyecto Telecomunicaciones</h3>
                 </div>
+                <div class="columnastipo">
+                    <h3>Reglamento Telecomunicaciones</h3>
+                </div>
             </div>
         </div>
         <div class="cabecera">
@@ -97,7 +100,10 @@
             <div class="columnas">
                 <div class="columnastipo">
                     <h3>Proyecto Fotovoltaica</h3>
-                </div> 
+                </div>
+                <div class="columnastipo">
+                    <h3>Reglamento Fotovoltaica</h3>
+                </div>
             </div> 
         <div class="cabecera">
             <h2>Programacion</h2>
