añadidos reglamento de telecomunicaciones y fotoboltaica

--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
                 </div>
                 <div class="columnastipo">
                     <h3>Reglamento Telecomunicaciones</h3>
+                    <p>
+                        El Reglamento de Infraestructuras Comunes de Telecomunicaciones (ICT) establece los requisitos técnicos que deben cumplir los edificios para asegurar el acceso adecuado a los servicios de telecomunicaciones. El reglamento, actualizado mediante el Real Decreto 346/2011, regula la instalación y mantenimiento de las infraestructuras necesarias para servicios como televisión, radio, telefonía, y acceso a internet, garantizando que los edificios estén preparados para soportar estos sistemas de manera eficiente y segura.
+                        Algunas de las principales características de este reglamento son:
+                        Instalaciones comunes: Se establecen infraestructuras comunes para evitar la proliferación de sistemas individuales, favoreciendo el acceso a los servicios de telecomunicación para todos los usuarios de un edificio.
+                        Evolución tecnológica: El reglamento facilita la futura adaptación de las infraestructuras a nuevos servicios y tecnologías, como el concepto de "hogar digital".
+                        Competencias autonómicas: Las comunidades autónomas tienen la responsabilidad de supervisar el cumplimiento de estas normativas y garantizar su aplicación en las edificaciones de su territorio
+                    </p>
+                    <p><a href="https://docs.televes.com/web/Legislacion/f_ict2_3ed_a4_web_0.pdf" target="_blank">Resumen reglamento de televes</a></p>
+                    <p><a href="https://www.boe.es/biblioteca_juridica/codigos/codigo.php?id=110&modo=2&nota=0&tab=2" target="_blank">Reglamento ICT</a></p>
                 </div>
             </div>
         </div>
@@ -103,6 +112,25 @@
                 </div>
                 <div class="columnastipo">
                     <h3>Reglamento Fotovoltaica</h3>
+                    <p>
+                        El Reglamento para instalaciones fotovoltaicas en España está regulado por varias normativas que aseguran que las instalaciones de generación de energía solar cumplan con los requisitos técnicos y de seguridad necesarios. Este reglamento abarca principalmente los siguientes decretos:
+                        Real Decreto 244/2019 (Autoconsumo eléctrico)
+                        Este decreto establece las condiciones administrativas, técnicas y económicas para el autoconsumo de energía eléctrica en España, promoviendo la instalación de sistemas fotovoltaicos en hogares y empresas. Las características clave del decreto incluyen:
+                        Definición de autoconsumo: Se refiere al uso de energía eléctrica generada por instalaciones cercanas a los puntos de consumo, tanto para uso individual como colectivo.
+                        Modalidades de autoconsumo:
+                        Autoconsumo sin excedentes: Toda la energía generada se consume en el lugar sin volcarla a la red eléctrica.
+                        Autoconsumo con excedentes: Los excedentes de energía no consumida se pueden verter a la red, con la posibilidad de recibir una compensación económica.
+                        Compensación de excedentes: La energía que se vierta a la red puede ser compensada económicamente mediante la factura eléctrica, reduciendo los costes para el usuario.
+                        Simplificación de trámites: Se agilizan los procedimientos para instalaciones de pequeña potencia, especialmente en viviendas y comunidades
+                        Real Decreto 1699/2011 (Conexión a red de pequeña potencia)
+                        Este decreto regula la conexión de instalaciones de generación de pequeña potencia, como las instalaciones fotovoltaicas, a la red eléctrica. Entre los puntos más relevantes se encuentran:
+                        Condiciones técnicas: Establece los requisitos para asegurar que la instalación no afecte la estabilidad de la red eléctrica.
+                        Procedimientos administrativos: Define los trámites para obtener la autorización de conexión a la red, que incluye la evaluación de seguridad y compatibilidad técnica.
+                        Tarifas de acceso: Regula las tarifas que deben pagar las instalaciones conectadas a la red por el uso de las infraestructuras de distribución
+                        Normativas adicionales de seguridad y eficiencia:
+                        Además de los decretos específicos para instalaciones fotovoltaicas, se aplican normativas de seguridad y eficiencia energética generales, como las contenidas en el Real Decreto 1955/2000, que regula la distribución y suministro de energía eléctrica en todo el territorio
+                    </p>
+                    <p><a href="https://www.idae.es/publicaciones/instalaciones-de-energia-solar-fotovoltaica-pliego-de-condiciones-tecnicas-de" target="_blank">Reglamento de IDAE</a></p>
                 </div>
             </div> 
         <div class="cabecera">
