--- a/index.html
+++ b/index.html
@@ -151,7 +151,17 @@
                     <p><a href="https://www.tesuva.edu.co/phocadownloadpap/Fundamentos%20de%20programcion%20en%20Java.pdf" target="_blank">Java</a></p>
                     <p><a href="https://jorgesanchez.net/manuales/sql/intro-sql-sql2016.html" target="_blank">SQL</a></p>
                 </div>
-            </div>      
+            </div> 
+            <div class="cabecera">
+                <h2>Domotica</h2>
+                <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Domotica</p>
+            </div>
+            <div class="columnas">
+                <div class="columnastipo">
+                    <h3>proyecto Domotica</h3>
+                    <p></p>
+                </div>
+            </div>     
     </main>
     <footer>
             <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
