Restructura del html

--- a/index.html
+++ b/index.html
@@ -33,14 +33,17 @@
         <div class="columnas">
             </div>
             <div class="columnastipo">
+                <h3>Enlaces a todos los proyectos</h3>
+                <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+                <p>Tiendas</p>
+                <p><a href="https://www.alldatasheet.es/" target="_blank">Tienda de Componentes</a></p>
+                <p>Proyectos</p>
+                <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Proyecto Campo</a></p>
+            </div>
+            <div class="columnastipo">
                 <h3>Proyecto Campo</h3>
                 <p>Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago. Conseguimos domotizar su terreno según sus necesidades.</p>
                 <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Codigo base</a></p>
-            </div>
-            <div class="columnastipo">
-                <h3>Enlaces a todos los proyectos</h3>
-                <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
-                <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Proyecto Campo</a></p>
             </div>
             <div class="columnastipo">
                 <h3>Prosimo proyecto</h3>
@@ -52,7 +55,16 @@
         </div>
         <div class="columnas">
             <div class="columnastipo">
-                <h3>Proyecto Electricidad</h3>
+                <h3>Enlaces Electricidad</h3>
+                <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+                <p>Reglamentos</p>
+                <p><a href="https://www.plcmadrid.es/rebt/"target="_blank">REBT de plcmadrid</a></p>
+                <p><a href="https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/baja-tension/Paginas/guia-tecnica-aplicacion.aspx"target="_blank">REBT de industria</a></p>
+                <p><a href="https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/instalaciones-alta-tension/Paginas/reglamento-seguridad-instalaciones-alta-tension.aspx"target="_blank">RLAT de industria</a></p>
+                <p>Tiendas</p>
+                <p><a href="https://www.chint.eu/es/" target="_blank">CHINT</a></p>
+                <p><a href="https://www.se.com/ww/en/" target="_blank">SCHNEIDER</a></p>
+                <p>Proyectos</p>
             </div>
             <div class="columnastipo">
                 <h3>Reglmento REBT</h3>
@@ -79,6 +91,9 @@
                 </p>
                 <p><a href="https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/instalaciones-alta-tension/Paginas/reglamento-seguridad-instalaciones-alta-tension.aspx"target="_blank">RLAT de industria</a></p>
             </div>
+            <div class="columnastipo">
+                <h3>Proyectos Electricidad</h3>
+            </div>
         </div>
         <div class="cabecera">
             <h2>Telecomunicadiones</h2>
@@ -86,7 +101,14 @@
         </div>
             <div class="columnas">
                 <div class="columnastipo">
-                    <h3>Proyecto Telecomunicaciones</h3>
+                    <h3>Enlaces Telecomunicaciones</h3>
+                    <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+                    <p>Reglamento</p>
+                    <p><a href="https://docs.televes.com/web/Legislacion/f_ict2_3ed_a4_web_0.pdf" target="_blank">Resumen reglamento de televes</a></p>
+                    <p><a href="https://www.boe.es/biblioteca_juridica/codigos/codigo.php?id=110&modo=2&nota=0&tab=2" target="_blank">Reglamento ICT</a></p>
+                    <p>Tiendas</p>
+                    <p><a href="https://global.televes.com/" target="_blank">TELEVES</a></p>
+                    <p>Proyectos</p>
                 </div>
                 <div class="columnastipo">
                     <h3>Reglamento Telecomunicaciones</h3>
@@ -100,6 +122,9 @@
                     <p><a href="https://docs.televes.com/web/Legislacion/f_ict2_3ed_a4_web_0.pdf" target="_blank">Resumen reglamento de televes</a></p>
                     <p><a href="https://www.boe.es/biblioteca_juridica/codigos/codigo.php?id=110&modo=2&nota=0&tab=2" target="_blank">Reglamento ICT</a></p>
                 </div>
+                <div class="columnastipo">
+                    <h3>Proyectos Telecomunicaciones</h3>
+                </div>
             </div>
         </div>
         <div class="cabecera">
@@ -108,7 +133,13 @@
         </div>
             <div class="columnas">
                 <div class="columnastipo">
-                    <h3>Proyecto Fotovoltaica</h3>
+                    <h3>Enlaces Fotovoltaica</h3>
+                    <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+                    <p>Reglamento</p>
+                    <p><a href="https://www.idae.es/publicaciones/instalaciones-de-energia-solar-fotovoltaica-pliego-de-condiciones-tecnicas-de" target="_blank">Reglamento de IDAE</a></p>
+                    <p>Tiendas</p>
+                    <p><a href="" target="_blank"></a></p>
+                    <p>Proyectos</p>
                 </div>
                 <div class="columnastipo">
                     <h3>Reglamento Fotovoltaica</h3>
@@ -132,6 +163,9 @@
                     </p>
                     <p><a href="https://www.idae.es/publicaciones/instalaciones-de-energia-solar-fotovoltaica-pliego-de-condiciones-tecnicas-de" target="_blank">Reglamento de IDAE</a></p>
                 </div>
+                <div class="columnastipo">
+                    <h3>Proyectos Fotovoltaica</h3>
+                </div>
             </div> 
         <div class="cabecera">
             <h2>Programacion</h2>
@@ -139,7 +173,9 @@
         </div>
             <div class="columnas">
                 <div class="columnastipo">
-                    <h3>Proyecto Programacion</h3>
+                    <h3>Enlaces Programacion</h3>
+                    <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+                    <p>Proyectos</p>
                 </div>
                 <div class="columnastipo">
                     <h3>Libros de programación</h3>
@@ -151,6 +187,9 @@
                     <p><a href="https://www.tesuva.edu.co/phocadownloadpap/Fundamentos%20de%20programcion%20en%20Java.pdf" target="_blank">Java</a></p>
                     <p><a href="https://jorgesanchez.net/manuales/sql/intro-sql-sql2016.html" target="_blank">SQL</a></p>
                 </div>
+                <div class="columnastipo">
+                    <h3>Proyectos Programacion</h3>
+                </div>
             </div> 
             <div class="cabecera">
                 <h2>Domotica</h2>
@@ -158,8 +197,17 @@
             </div>
             <div class="columnas">
                 <div class="columnastipo">
-                    <h3>proyecto Domotica</h3>
+                    <h3>Enlaces Domotica</h3>
+                    <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+                    <p>documentacion</p>
                     <p> <a href="" target="_blank"></a></p>
+                    <p><a href="pdf\2.- CURSO LOGO 8 N1.pdf" target="_blank">PDF deL LOGO Basico</a></p>
+                    <p><a href="pdf\5.- CURSO LOGO 8 N2.pdf" target="_blank">PDF deL LOGO Avanzado</a></p>
+                    <p><a href="pdf\3.- CURSO SIMATIC_N1 S-1200.pdf" target="_blank">PDF del S-1200 Basico</a></p>
+                    <p><a href="pdf\4.- CURSO WINCC TIA PORTAL.pdf" target="_blank">PDF del S1200 Avanzado</a></p>
+                    <p>Tiendas</p>
+                    <p><a href="https://www.siemens.com/global/en/products.html" target="_blank">SIEMENS</a></p>
+                    <p>Proyectos</p>
                 </div>
                 <div class="columnastipo">
                     <h3>PLC LOGO de SIEMENS</h3>
@@ -183,6 +231,7 @@
                     </p>
                     <p><a href="pdf\2.- CURSO LOGO 8 N1.pdf" target="_blank">PDF deL LOGO Basico</a></p>
                     <p><a href="pdf\5.- CURSO LOGO 8 N2.pdf" target="_blank">PDF deL LOGO Avanzado</a></p>
+                    
                 </div>
                 <div class="columnastipo">
                     <h3>PLC S7-1200 de SIEMENS</h3>
@@ -211,6 +260,12 @@
                     </p>
                     <p><a href="pdf\3.- CURSO SIMATIC_N1 S-1200.pdf" target="_blank">PDF del S-1200 Basico</a></p>
                     <p><a href="pdf\4.- CURSO WINCC TIA PORTAL.pdf" target="_blank">PDF del S1200 Avanzado</a></p>
+                </div>
+                <div class="columnastipo">
+                    <h3>Proyectos LOGO</h3>
+                </div>
+                <div class="columnastipo">
+                    <h3>Proyectos S7-1200</h3>
                 </div>
             </div>     
     </main>
