Actualizacion de apartado domotica

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                     <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
                     <p>documentacion</p>
                     <p> <a href="" target="_blank"></a></p>
+                    <p><a href="pdf\1.- GUIA BASICA PLC.pdf" target="_blank">PDF Basico PLC</a></p>
                     <p><a href="pdf\2.- CURSO LOGO 8 N1.pdf" target="_blank">PDF deL LOGO Basico</a></p>
                     <p><a href="pdf\5.- CURSO LOGO 8 N2.pdf" target="_blank">PDF deL LOGO Avanzado</a></p>
                     <p><a href="pdf\3.- CURSO SIMATIC_N1 S-1200.pdf" target="_blank">PDF del S-1200 Basico</a></p>
