--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header>
+        <meta name="google-site-verification" content="he7YzhWR52NUtO_oymGIZZyulUm27DcI-QqdEMCjS48" />
         <img src="logo.png" alt="Logo de JCPELECTRIK">
         
             <h1>JCP ELECTRIK</h1>
