--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pagina web de JCPELECTRIK">
+    <meta name="keywords" content="Electricidad, Electronica, Fotovoltaica, Telecomunicaciones, Domotica y Programacion">
+    <meta name="author" content="JCPELECTRIK">
     <title>JCPELECTRIK</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
