--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="JCPELECTRIK">
     <title>JCPELECTRIK</title>
     <link rel="stylesheet" href="style.css">
+    <script src="javascript.js" defer></script>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 
@@ -15,9 +16,21 @@
 <body>
     <header>
         <img src="logo.png" alt="Logo de JCPELECTRIK">
-        
+
             <h1>JCP ELECTRIK</h1>
-       
+
+        <nav class="cabecera">
+            <ul>
+                <li><a href="#electronica">Electrónica</a></li>                    
+                <li><a href="#electricidad">Electricidad</a></li>
+                <li><a href="#telecomunicaciones">Telecomunicaciones</a></li>
+                <li><a href="#fotovoltaica">Fotovoltaica</a></li>
+                <li><a href="#programacion">Programación</a></li>
+                <li><a href="#domotica">Domótica</a></li>
+                <li><a href="#fotos proyectos">Fotos Proyectos</a></li>
+                <li><a href="#videos proyectos">Videos Proyectos</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div class="cabecera">
@@ -29,7 +42,7 @@
                 Mi correo es jcpelectrik@gmail.com
             </p>
         </div>
-        <div class="cabecera">
+        <div class="cabecera" id="electronica">
             <h2>Electronica</h2>
             <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Electronica</p>
         </div>
@@ -52,7 +65,7 @@
                 <h3>Prosimo proyecto</h3>
                 <p></p>
         </div>
-        <div class="cabecera">
+        <div class="cabecera" id="electricidad">
             <h2>Electricidad</h2>
             <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Electricidad</p>
         </div>
@@ -98,7 +111,7 @@
                 <h3>Proyectos Electricidad</h3>
             </div>
         </div>
-        <div class="cabecera">
+        <div class="cabecera" id="telecomunicaciones">
             <h2>Telecomunicadiones</h2>
             <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Telecomunicadiones</p>
         </div>
@@ -130,7 +143,7 @@
                 </div>
             </div>
         </div>
-        <div class="cabecera">
+        <div class="cabecera" id="fotovoltaica">
             <h2>fotovoltaica</h2>
             <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Fotovoltaica</p>
         </div>
@@ -170,7 +183,7 @@
                     <h3>Proyectos Fotovoltaica</h3>
                 </div>
             </div> 
-        <div class="cabecera">
+        <div class="cabecera" id="programacion">
             <h2>Programacion</h2>
             <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Programacion</p>
         </div>
@@ -194,7 +207,7 @@
                     <h3>Proyectos Programacion</h3>
                 </div>
             </div> 
-            <div class="cabecera">
+            <div class="cabecera" id="domotica">
                 <h2>Domotica</h2>
                 <p>Aqui se pondran todos los proyectos y documentacion relacionada a la Domotica</p>
             </div>
@@ -271,7 +284,49 @@
                 <div class="columnastipo">
                     <h3>Proyectos S7-1200</h3>
                 </div>
-            </div>     
+            </div> 
+            <div class="cabecera" id="fotos proyectos">
+                <h2>Fotos Proyectos</h2>
+                <p>En esta sección encontrarás todos las fotos de los proyectos</p>
+                <section id="galeria-proyectos">
+                    <h2>Proyectos Destacados</h2>
+                    <div class="galeria-container">
+                        <div class="galeria-container">
+                            <div class="proyecto">
+                                <img src="" alt="">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+                            <div class="proyecto">
+                                <img src="" alt="">
+                                <h3></h3>
+                                <p></p>
+                            </div>
+                        </div>
+                    </div>
+                </section> 
+            </div>
+            <div class="cabecera" id="videos proyectos">
+                <h2>Videos proyectos</h2>
+                <p>En esta sección encontrarás todos los videos de los proyectos</p>
+                <div class="columnas">
+                        <div class="proyecto">
+                            <video controls>
+                                <source src="" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3></h3>
+                            <p></p>
+                        </div> 
+                        <div class="proyecto">
+                            <video controls>
+                                <source src="" type="video/mp4">
+                                Tu navegador no soporta la reproducción de videos.
+                            </video>
+                            <h3></h3>
+                            <p></p>
+                        </div> 
+                </div>
     </main>
     <footer>
             <p>Copyright &copy; 2023 <span>JCP ELECTRIK </span>All rights reserved.</p>
