--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <h1>JCP ELECTRIK</h1>
 
-        <nav class="cabecera">
+        <nav>
             <ul>
                 <li><a href="#electronica">Electrónica</a></li>                    
                 <li><a href="#electricidad">Electricidad</a></li>
