proyecto el motor mas pequeño del mundo

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                 <p><a href="https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/instalaciones-alta-tension/Paginas/reglamento-seguridad-instalaciones-alta-tension.aspx"target="_blank">RLAT de industria</a></p>
             </div>
             <div class="columnastipo">
-                <h3>Proyectos Electricidad</h3>
+                <h3>El motor mas pequeño del mundo</h3>
+                <p>Este proyecto consiste en dar 15 vueltas con un cable desnudo alrededor de un canutillo de 2cm de diámetro para conseguir crear la bobina de nuestro motor. Lo siguiente que hay que hacer es darle tensión a una estructura que sujete la bobina. Esta estructura también tiene que hacerse con cable desnudo. Ya solo queda darle tensión de corriente continua y acercarle un imán para que se ponga a girar.</p>
+                <p><li><a href="#proyecto motor">proyecto motor</a></li></p>
             </div>
         </div>
         <div class="cabecera" id="telecomunicaciones">
@@ -310,12 +312,12 @@
                 <h2>Videos proyectos</h2>
                 <p>En esta sección encontrarás todos los videos de los proyectos</p>
                 <div class="columnas">
-                        <div class="proyecto">
+                        <div class="proyecto" id="proyecto motor">
                             <video controls>
-                                <source src="" type="video/mp4">
+                                <source src="videos\fotos\WhatsApp Video 2024-09-26 at 11.06.34.mp4" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                             </video>
-                            <h3></h3>
+                            <h3>El motor mas pequeño del mundo</h3>
                             <p></p>
                         </div> 
                         <div class="proyecto">
