--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
             <div class="columnastipo">
                 <h3>Enlaces a todos los proyectos</h3>
                 <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
+                <p>Dovumentacion</p>
                 <p>Tiendas</p>
                 <p><a href="https://www.alldatasheet.es/" target="_blank">Tienda de Componentes</a></p>
                 <p>Proyectos</p>
-                <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Proyecto Campo</a></p>
+                <p><a href="#Proyecto campo">Proyecto Campo</a></p>
             </div>
-            <div class="columnastipo">
+            <div class="columnastipo" id="Proyecto campo">
                 <h3>Proyecto Campo</h3>
                 <p>Este proyecto trata de controlar mediante varios ESP32-S3 un campo, chalet o lago. Conseguimos domotizar su terreno según sus necesidades.</p>
                 <p><a href="https://github.com/jcpelectrik/Proyecto-Campo" target="_blank">Codigo base</a></p>
