coregir faltas de ortografia

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="columnastipo">
                 <h3>Enlaces a todos los proyectos</h3>
                 <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
-                <p>Dovumentacion</p>
+                <p>Documentacion</p>
                 <p>Tiendas</p>
                 <p><a href="https://www.alldatasheet.es/" target="_blank">Tienda de Componentes</a></p>
                 <p>Proyectos</p>
