--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <div class="columnas">
                         <div class="proyecto" id="proyecto motor">
                             <video controls>
-                                <source src="videos\fotos\WhatsApp Video 2024-09-26 at 11.06.34.mp4" type="video/mp4">
+                                <source src="videos\WhatsApp Video 2024-09-26 at 11.06.34.mp4" type="video/mp4">
                                 Tu navegador no soporta la reproducción de videos.
                             </video>
                             <h3>El motor mas pequeño del mundo</h3>
