Restructura de carpetas

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <title>JCPELECTRIK</title>
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js" defer></script>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo de JCPELECTRIK">
+        <img src="Logos\logo.png" alt="Logo de JCPELECTRIK">
 
             <h1>JCP ELECTRIK</h1>
 
