Nuevos enlaces añadidos

--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
         <div class="columnas">
             </div>
             <div class="columnastipo">
-                <h3>Enlaces a todos los proyectos</h3>
+                <h3>Enlaces Electronica</h3>
                 <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
                 <p>Documentacion</p>
+                <p><a href="https://www.luisllamas.es/tutoriales-arduino/" target="_blank">Arduino</a></p>
+                <p><a href="https://www.luisllamas.es/esp8266-esp32/" target="_blank">Esp 32</a></p>
                 <p>Tiendas</p>
                 <p><a href="https://www.alldatasheet.es/" target="_blank">Tienda de Componentes</a></p>
                 <p>Proyectos</p>
@@ -82,6 +84,7 @@
                 <p><a href="https://www.chint.eu/es/" target="_blank">CHINT</a></p>
                 <p><a href="https://www.se.com/ww/en/" target="_blank">SCHNEIDER</a></p>
                 <p>Proyectos</p>
+                <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
             </div>
             <div class="columnastipo">
                 <h3>Reglmento REBT</h3>
@@ -109,6 +112,10 @@
                 <p><a href="https://industria.gob.es/Calidad-Industrial/seguridadindustrial/instalacionesindustriales/instalaciones-alta-tension/Paginas/reglamento-seguridad-instalaciones-alta-tension.aspx"target="_blank">RLAT de industria</a></p>
             </div>
             <div class="columnastipo">
+                <h3>Proyectos Electricidad</h3>
+                <p><li><a href="#El motor mas pequeño del mundo">El motor mas pequeño del mundo</a></li></p>
+            </div>
+            <div class="columnastipo" id="El motor mas pequeño del mundo">
                 <h3>El motor mas pequeño del mundo</h3>
                 <p>Este proyecto consiste en dar 15 vueltas con un cable desnudo alrededor de un canutillo de 2cm de diámetro para conseguir crear la bobina de nuestro motor. Lo siguiente que hay que hacer es darle tensión a una estructura que sujete la bobina. Esta estructura también tiene que hacerse con cable desnudo. Ya solo queda darle tensión de corriente continua y acercarle un imán para que se ponga a girar.</p>
                 <p><li><a href="#proyecto motor">proyecto motor</a></li></p>
@@ -195,9 +202,10 @@
                     <h3>Enlaces Programacion</h3>
                     <p>En esta sección encontrarás los enlaces a todos los proyectos que he realizado para que puedas acceder a ellos fácilmente.</p>
                     <p>Proyectos</p>
+                    <p><a href="#Proyecto campo">Proyecto Campo</a></p>
                 </div>
                 <div class="columnastipo">
-                    <h3>Libros de programación</h3>
+                    <h3>Libros y cursos de programación</h3>
                     <p><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.pdf" target="_blank">JavaScript</a></p>
                     <p><a href="https://riptutorial.com/Download/typescript-es.pdf" target="_blank">TypeScript</a></p>
                     <p><a href="https://argentinaenpython.com/quiero-aprender-python/aprenda-a-pensar-como-un-programador-con-python.pdf" target="_blank">Python</a></p>
@@ -205,9 +213,18 @@
                     <p><a href="https://phpdevenezuela.github.io/php-the-right-way/" target="_blank">PHP</a></p> 
                     <p><a href="https://www.tesuva.edu.co/phocadownloadpap/Fundamentos%20de%20programcion%20en%20Java.pdf" target="_blank">Java</a></p>
                     <p><a href="https://jorgesanchez.net/manuales/sql/intro-sql-sql2016.html" target="_blank">SQL</a></p>
+                    <p><a href="https://www.luisllamas.es/curso-cpp/" target="_blank">C++</a></p>
+                    <p><a href="https://www.luisllamas.es/curso-csharp/" target="_blank">C#</a></p>
+                    <p><a href="https://www.luisllamas.es/tutoriales-arduino/" target="_blank">Arduino</a></p>
+                    <p><a href="https://www.luisllamas.es/esp8266-esp32/" target="_blank">Esp 32</a></p>
+                    <p><a href="https://www.luisllamas.es/curso-raspberry-pi/" target="_blank">Raspberry pi</a></p>
+                    <p><a href="https://web.dev/learn/html" target="_blank">HTML</a></p>
+                    <p><a href="https://web.dev/learn/css?hl=es-419" target="_blank">CSS</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Proyectos Programacion</h3>
+                    <p>El proyecto campo antes mencionado en el apartado de electrónica también tiene que ver con la programación, así que también lo pondré en este apartado.</p>
+                    <p><a href="#Proyecto campo">Proyecto Campo</a></p>
                 </div>
             </div> 
             <div class="cabecera" id="domotica">
