Renombramiento del javascript

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="JCPELECTRIK">
     <title>JCPELECTRIK</title>
     <link rel="stylesheet" href="style.css">
-    <script src="javascript.js" defer></script>
+    <script src="interactividad.js" defer></script>
     <link rel="shortcut icon" href="Logos\favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 
@@ -219,7 +219,7 @@
                     <p><a href="https://www.luisllamas.es/esp8266-esp32/" target="_blank">Esp 32</a></p>
                     <p><a href="https://www.luisllamas.es/curso-raspberry-pi/" target="_blank">Raspberry pi</a></p>
                     <p><a href="https://web.dev/learn/html" target="_blank">HTML</a></p>
-                    <p><a href="https://web.dev/learn/css?hl=es-419" target="_blank">CSS</a></p>
+                    <p><a href="https://web.dev/learn/css?hl=es-419" target="_blank">css</a></p>
                 </div>
                 <div class="columnastipo">
                     <h3>Proyectos Programacion</h3>
