Codigo de colores RJ45

--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
                     <div class="galeria-container">
                         <div class="galeria-container">
                             <div class="proyecto">
-                                <img src="" alt="">
-                                <h3></h3>
+                                <img src="fotos\ethcable568b.gif" alt="Cocigo de colores RJ45">
+                                <h3>Cocigo de colores RJ45</h3>
                                 <p></p>
                             </div>
                             <div class="proyecto">
