prueva de distintos html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <nav>
             <ul>
-                <li><a href="#electronica">Electrónica</a></li>                    
-                <li><a href="#electricidad">Electricidad</a></li>
+                <li><a href="Electronica.html">Electrónica</a></li>                    
+                <li><a href="Electricidad.html">Electricidad</a></li>
                 <li><a href="#telecomunicaciones">Telecomunicaciones</a></li>
                 <li><a href="#fotovoltaica">Fotovoltaica</a></li>
                 <li><a href="#programacion">Programación</a></li>
